package Ejercicio1;

public interface ElementFactory {
    Elemento crearElementoSimple();
}
