package Ejercicio1;

import java.util.ArrayList;

public interface FactoryKit {

    public void añadirElemento(Elemento elemento);
    public void eliminarElemento(Elemento elemento);
    public double getPrecio();


}
